--- a/mplayer.css
+++ b/mplayer.css
@@ -6,4 +6,13 @@ h1{
 
 body {
     text-align: center;
+    background: #000022;
+}
+
+.appframe{
+    background: #ffffff;
+    width: 420px;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
 }
